--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "arrowParens": "avoid",
-  "trailingComma": "es5",
+  "printWidth": 85,
+  "arrowParens": "always",
+  "semi": true,
+  "tabWidth": 2,
   "singleQuote": true,
-  "semi": true
+  "jsxSingleQuote": true
 }
